# airpulse-wireless-health-monitoring

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  llms.txt  robots.md  robots.txt  simulate_csi.py
core/airpulse-core-rust/: .gitignore  Cargo.toml  README.md  build.rs
core/airpulse-core-rust/src/: airpulse_core.udl  dsp.rs  lib.rs  tracking.rs
ingester/: Dockerfile  main.go
mobile/: App.tsx  README.md  package-lock.json  package.json
mobile/src/components/: GlassPanel.tsx  VitalsChart.tsx
mobile/src/hooks/: useTelemetry.ts
mobile/src/native/: AirPulseCore.ts
server/: database.py  main.py
server/plugins/: base.py
server/plugins/wifi_pulse/: config.py  exceptions.py  vitals.py
