[package]
name = "airpulse-core-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "airpulse_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Mathematical operations and signal filtering
scru128 = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mozilla UniFFI for automated Swift/Kotlin bindings generation
uniffi = { version = "0.25", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }
